
-------------------------------------------------------------------------------

Sat Oct 30 16:55:30 PDT 1999
(Mandrake)

Still trying to make the API sane

-------------------------------------------------------------------------------

Sat Oct 30 17:19:36 PDT 1999
(Mandrake)

API editing (slightly).  I have a question - how portable is using time_t?
Anyone care to take that one?  time_t in a file, that is.  I want to be able to
store the last modification date of something NOT as a string.

-------------------------------------------------------------------------------

Sat Oct 30 18:31:02 PDT 1999
(Mandrake)

eConfigGetData() is starting to take shape now - we just have to figure out
what to do about these binary timestamps

-------------------------------------------------------------------------------

Sat Oct 30 20:07:13 PDT 1999
(Mandrake)

adding some comments here and there as I go.  going to try to "Do the Right
Thing" from the ground up this time.

-------------------------------------------------------------------------------

Sat Oct 30 23:20:26 PDT 1999
(Mandrake)

thanks to Hans Lofving <hans.316@brfmasthugget.se> for pointing out that I had
part of my internal API backwards.  Luckily we could repair that :)

-------------------------------------------------------------------------------

Sun Oct 31 12:24:17 PST 1999
(Mandrake)

committing what I did last night before I went to bed.  I don't remember what
this does

-------------------------------------------------------------------------------

Sun Oct 31 16:53:24 PST 1999
(Mandrake)

A little bit of work here and there.  the API is coming together nicely.  Need
to rethink a minor bit of work in _econf_save_data_to_disk -- it needs local
and global tags, etc.  I need to clean some of that up.

-------------------------------------------------------------------------------

Sun Oct 31 18:59:05 PST 1999
(Mandrake)

internal API is cleaning up now.  I think I've figured out how to resolve my
problem